<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_first_message_hint">Enter a message</string>
    <string name="button_first_send">Send</string>
    <string name="switch_sign_in">Stay Signed In</string>
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>
    <string name="action_sign_out">Sign Out</string>

    <string name="hint_first">First Name</string>
    <string name="hint_last">Last Name</string>
    <string name="hint_username">Username (optional, email used if blank)</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_again">Retype Password</string>
    <string name="hint_add_contact">Enter Username here</string>
    <string name="hint_search">Search</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>

    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_weather">Weather</string>
    <string name="title_settings">Settings</string>
    <string name="title_change_color">Change Color</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_sign_out">Sign out</string>

    <string name="base_url">https://team-2-tcss-450-project.herokuapp.com/</string>

    <string name="app_name">ThermoChat</string>
    <string name="current_weather">Current Weather:</string>
    <string name="daily_forecast">Daily Forecast:</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>