<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/title_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_change_color"
        android:orderInCategory="100"
        android:title="@string/title_change_color"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_change_password"
        android:orderInCategory="100"
        android:title="@string/title_change_password"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_signOut"
        android:orderInCategory="100"
        android:title="@string/title_sign_out"
        app:showAsAction="never"/>


</menu>