<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.uw.tcss450.team2.thermochat.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"></fragment>
    <fragment
        android:id="@+id/navigation_chat"
        android:name="edu.uw.tcss450.team2.thermochat.ui.chat.ChatListFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat_list" >
        <action
            android:id="@+id/action_navigation_chat_to_chatFragment"
            app:destination="@id/chatFragment"
            app:popUpTo="@id/navigation_chat"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/navigation_contacts"
        android:name="edu.uw.tcss450.team2.thermochat.ui.contacts.ContactListFragment"
        android:label="@string/title_contacts"
        tools:layout="@layout/fragment_contact_list" >
    </fragment>

    <fragment
        android:id="@+id/navigation_weather"
        android:name="edu.uw.tcss450.team2.thermochat.ui.weather.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" />
    <fragment
        android:id="@+id/chatFragment"
        android:name="edu.uw.tcss450.team2.thermochat.ui.chat.ChatFragment"
        android:label="fragment_chat"
        tools:layout="@layout/fragment_chat">
        <argument
            android:name="chat"
            app:argType="edu.uw.tcss450.team2.thermochat.ui.chat.ChatRoom"/>
    </fragment>
</navigation>